Implement AI-driven dynamic diagnostic command generation
MAJOR ENHANCEMENT - AI Decides What Commands to Run:
==================================================

Problem Solved:
- Previously: Hardcoded templates couldn't handle all scenarios
- Example: 'pod restarted 3 times' only ran 'kubectl get pods', missed describe/logs/events
- Result: Incomplete diagnostics, user had to manually run additional commands

New AI-Driven Approach:
- LLM analyzes user query and generates specific kubectl commands needed
- Adapts to context: restarts  adds --previous logs, crashes  adds events
- Extracts pod names from query and uses them in commands
- Security: All AI-generated commands validated through existing whitelist

Implementation:
1. Added 'generate_commands' prompt template in llm_agent.py
2. New method: generate_diagnostic_commands() - LLM generates JSON command list
3. Enhanced orchestrator.py with ai_driven_diagnostics flag
4. Updated execution_agent.py to handle AI-generated commands
5. Improved fallback logic for when LLM unavailable (handles describe, list, etc.)

Configuration:
- orchestrator.ai_driven_diagnostics: true (default) - Use AI
- Falls back to smart template-based if Ollama unavailable

Benefits:
 Handles ANY troubleshooting scenario dynamically
 No code changes needed for new use cases
 Generates 'kubectl logs --previous' for restart queries
 Adds 'kubectl get events' for crash/error queries
 Extracts and uses pod names from natural language
 Still respects security (read-only validation applies)

Example:
User: 'ccr-harbor-jobservice restarted 3 times, what's wrong?'
AI Generates:
  1. kubectl describe pod ccr-harbor-jobservice -n cal-shared-product
  2. kubectl logs ccr-harbor-jobservice -n cal-shared-product --previous
  3. kubectl logs ccr-harbor-jobservice -n cal-shared-product
  4. kubectl get events --field-selector involvedObject.name=ccr-harbor-jobservice

This is true AI-powered DevOps now!

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -48,3 +48,4 @@ llm_agent:
 orchestrator:
   max_session_history: 100
   session_timeout: 3600
+  ai_driven_diagnostics: true  # Use LLM to generate diagnostic commands dynamically
