Fix LLM to use field-selectors instead of placeholders for delete operations
BUGFIX: LLM was generating 'kubectl delete pod POD_NAME' instead of actual commands

Problem:
  User: 'delete pods not in running state'
  LLM generated: kubectl delete pod POD_NAME -n namespace
  Result: Command executed but POD_NAME is literal, nothing deleted

Solution:
  Enhanced LLM prompt to avoid placeholders for delete operations
  Taught LLM to use field-selectors for bulk operations

Examples:
   OLD: kubectl delete pod POD_NAME -n ns
   NEW: kubectl delete pods -n ns --field-selector=status.phase!=Running

   OLD: kubectl delete pod {pod_name} (with placeholder)
   NEW: Use actual pod name from query or field-selector

Prompt changes:
   Added DELETE/MODIFY operations guidance
   Emphasized 'Use ACTUAL resource names, NOT placeholders'
   Showed proper field-selector syntax
   Added write commands section with correct examples

Now LLM will generate commands that actually delete pods!

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -30,12 +30,19 @@ execution_agent:
   ssh_enabled: false
   kubeconfig_path: "~/.kube/config"
   timeout: 300
+  
+  # Security Settings - Granular Control
+  read_only_mode: false        # Set to true to only allow safe read operations
+  allow_delete: true           # Allow kubectl delete operations
+  allow_create: false          # Block kubectl create/apply operations
+  allow_update: false          # Block kubectl edit/patch/scale operations
+  
+  # Forbidden Commands - Always blocked regardless of permissions
   forbidden_commands:
-    - "rm -rf"
-    - "delete"
-    - "destroy"
-    - "mkfs"
-    - "dd if="
+    - "rm -rf"        # Dangerous shell command
+    - "destroy"       # Destructive operations
+    - "mkfs"          # Filesystem formatting
+    - "dd if="        # Low-level disk operations
 
 # LLM Agent Configuration
 llm_agent:
